// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should hide add button and edit menu when in readOnly mode 1`] = `
<div
  className="SourcesList"
>
  <EntityList
    action={false}
    columns={
      Array [
        "Definition Name",
        "Tenants",
      ]
    }
    data={
      Array [
        Object {
          "actions": Array [],
          "className": "process",
          "entityType": "process",
          "icon": "data-source",
          "id": "defKey",
          "meta": Array [
            "Not defined, Sales, (Unauthorized Tenant)",
          ],
          "name": "definition name",
          "type": "Process",
        },
        Object {
          "actions": Array [],
          "className": "decision",
          "entityType": "process",
          "icon": "data-source",
          "id": "defKey2",
          "meta": Array [
            "Not defined, Marketing",
          ],
          "name": "decision report",
          "type": "Decision Table",
        },
      ]
    }
    empty="There are no sources added yet"
    isLoading={false}
    name="Data Sources"
  />
  <DeleterErrorHandler
    checkConflicts={[Function]}
    deleteEntity={[Function]}
    deleteText="Remove Data Source"
    descriptionText="The '' Data Source will be removed from the Collection."
    entity={null}
    getName={[Function]}
    onClose={[Function]}
    onDelete={[Function]}
    type="source"
  />
  <Modal
    className="saveModal"
    onClose={[Function]}
    onConfirm={[Function]}
    open={null}
  >
    <Component>
      Destructive Changes
    </Component>
    <Component />
    <Component>
      <ForwardRef(Button)
        className="close"
        disabled={false}
        main={true}
        onClick={[Function]}
      >
        Don't Save
      </ForwardRef(Button)>
      <ForwardRef(Button)
        className="confirm"
        disabled={false}
        main={true}
        onClick={[Function]}
        primary={true}
      >
        Save Changes
      </ForwardRef(Button)>
    </Component>
  </Modal>
  <AddSourceModalErrorHandler
    onClose={[Function]}
    onConfirm={[Function]}
    open={false}
    tenantsAvailable={true}
  />
</div>
`;

exports[`should hide edit and tenants in source items if there are not tenants available 1`] = `
Object {
  "actions": Array [
    Object {
      "action": [Function],
      "icon": "delete",
      "text": "Remove",
    },
  ],
  "className": "decision",
  "entityType": "process",
  "icon": "data-source",
  "id": "defKey2",
  "meta": Array [
    false,
  ],
  "name": "decision report",
  "type": "Decision Table",
}
`;

exports[`should match snapshot 1`] = `
<div
  className="SourcesList"
>
  <EntityList
    action={
      <ForwardRef(Button)
        main={true}
        onClick={[Function]}
        primary={true}
      >
        Add
      </ForwardRef(Button)>
    }
    columns={
      Array [
        "Definition Name",
        "Tenants",
      ]
    }
    data={
      Array [
        Object {
          "actions": Array [
            Object {
              "action": [Function],
              "icon": "edit",
              "text": "Edit",
            },
          ],
          "className": "process",
          "entityType": "process",
          "icon": "data-source",
          "id": "defKey",
          "meta": Array [
            "Not defined, Sales, (Unauthorized Tenant)",
          ],
          "name": "definition name",
          "type": "Process",
        },
        Object {
          "actions": Array [
            Object {
              "action": [Function],
              "icon": "edit",
              "text": "Edit",
            },
            Object {
              "action": [Function],
              "icon": "delete",
              "text": "Remove",
            },
          ],
          "className": "decision",
          "entityType": "process",
          "icon": "data-source",
          "id": "defKey2",
          "meta": Array [
            "Not defined, Marketing",
          ],
          "name": "decision report",
          "type": "Decision Table",
        },
      ]
    }
    empty="There are no sources added yet"
    isLoading={false}
    name="Data Sources"
  />
  <DeleterErrorHandler
    checkConflicts={[Function]}
    deleteEntity={[Function]}
    deleteText="Remove Data Source"
    descriptionText="The '' Data Source will be removed from the Collection."
    entity={null}
    getName={[Function]}
    onClose={[Function]}
    onDelete={[Function]}
    type="source"
  />
  <Modal
    className="saveModal"
    onClose={[Function]}
    onConfirm={[Function]}
    open={null}
  >
    <Component>
      Destructive Changes
    </Component>
    <Component />
    <Component>
      <ForwardRef(Button)
        className="close"
        disabled={false}
        main={true}
        onClick={[Function]}
      >
        Don't Save
      </ForwardRef(Button)>
      <ForwardRef(Button)
        className="confirm"
        disabled={false}
        main={true}
        onClick={[Function]}
        primary={true}
      >
        Save Changes
      </ForwardRef(Button)>
    </Component>
  </Modal>
  <AddSourceModalErrorHandler
    onClose={[Function]}
    onConfirm={[Function]}
    open={false}
    tenantsAvailable={true}
  />
</div>
`;

exports[`should pass conflict to confirmation modal if update failed 1`] = `
<Component>
  <p>
    These changes are incompatible with the Report(s):
  </p>
  <ul>
    <li
      key="reportId"
    >
      '
      Report Name
      '
    </li>
  </ul>
  <p>
    <b>
      Warning: Saving will remove Tenants from the Report(s).
    </b>
  </p>
</Component>
`;
